--- a/credit_risk_ensemble.ipynb
+++ b/credit_risk_ensemble.ipynb
@@ -1236,9 +1236,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mlenv",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "mlenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1250,7 +1250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
