--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -870,13 +870,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Actual High Risk</th>\n",
-       "      <td>53</td>\n",
-       "      <td>21</td>\n",
+       "      <td>51</td>\n",
+       "      <td>23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Actual Low Risk</th>\n",
-       "      <td>6304</td>\n",
-       "      <td>10827</td>\n",
+       "      <td>5835</td>\n",
+       "      <td>11296</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -884,8 +884,8 @@
       ],
       "text/plain": [
        "                  Predicted High Risk  Predicted Low Risk\n",
-       "Actual High Risk                   53                  21\n",
-       "Actual Low Risk                  6304               10827"
+       "Actual High Risk                   51                  23\n",
+       "Actual Low Risk                  5835               11296"
       ]
      },
      "execution_count": 13,
@@ -947,13 +947,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Actual High Risk</th>\n",
-       "      <td>53</td>\n",
-       "      <td>21</td>\n",
+       "      <td>51</td>\n",
+       "      <td>23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Actual Low Risk</th>\n",
-       "      <td>6304</td>\n",
-       "      <td>10827</td>\n",
+       "      <td>5835</td>\n",
+       "      <td>11296</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -961,8 +961,8 @@
       ],
       "text/plain": [
        "                  Predicted High Risk  Predicted Low Risk\n",
-       "Actual High Risk                   53                  21\n",
-       "Actual Low Risk                  6304               10827"
+       "Actual High Risk                   51                  23\n",
+       "Actual Low Risk                  5835               11296"
       ]
      },
      "metadata": {},
@@ -972,14 +972,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy Score : 0.6741141789737902\n",
+      "Accuracy Score : 0.6742893000992353\n",
       "Classification Report\n",
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.72      0.63      0.02      0.67      0.46        74\n",
-      "   low_risk       1.00      0.63      0.72      0.77      0.67      0.45     17131\n",
+      "  high_risk       0.01      0.69      0.66      0.02      0.67      0.46        74\n",
+      "   low_risk       1.00      0.66      0.69      0.79      0.67      0.45     17131\n",
       "\n",
-      "avg / total       0.99      0.63      0.72      0.77      0.67      0.45     17205\n",
+      "avg / total       0.99      0.66      0.69      0.79      0.67      0.45     17205\n",
       "\n"
      ]
     }
@@ -1095,13 +1095,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Actual High Risk</th>\n",
-       "      <td>49</td>\n",
-       "      <td>25</td>\n",
+       "      <td>54</td>\n",
+       "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Actual Low Risk</th>\n",
-       "      <td>5776</td>\n",
-       "      <td>11355</td>\n",
+       "      <td>6065</td>\n",
+       "      <td>11066</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1109,8 +1109,8 @@
       ],
       "text/plain": [
        "                  Predicted High Risk  Predicted Low Risk\n",
-       "Actual High Risk                   49                  25\n",
-       "Actual Low Risk                  5776               11355"
+       "Actual High Risk                   54                  20\n",
+       "Actual Low Risk                  6065               11066"
       ]
      },
      "execution_count": 18,
@@ -1170,13 +1170,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Actual High Risk</th>\n",
-       "      <td>49</td>\n",
-       "      <td>25</td>\n",
+       "      <td>54</td>\n",
+       "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Actual Low Risk</th>\n",
-       "      <td>5776</td>\n",
-       "      <td>11355</td>\n",
+       "      <td>6065</td>\n",
+       "      <td>11066</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1184,8 +1184,8 @@
       ],
       "text/plain": [
        "                  Predicted High Risk  Predicted Low Risk\n",
-       "Actual High Risk                   49                  25\n",
-       "Actual Low Risk                  5776               11355"
+       "Actual High Risk                   54                  20\n",
+       "Actual Low Risk                  6065               11066"
       ]
      },
      "metadata": {},
@@ -1195,14 +1195,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy Score : 0.662497810985932\n",
+      "Accuracy Score : 0.6878465938941101\n",
       "Classification Report\n",
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.66      0.66      0.02      0.66      0.44        74\n",
-      "   low_risk       1.00      0.66      0.66      0.80      0.66      0.44     17131\n",
+      "  high_risk       0.01      0.73      0.65      0.02      0.69      0.48        74\n",
+      "   low_risk       1.00      0.65      0.73      0.78      0.69      0.47     17131\n",
       "\n",
-      "avg / total       0.99      0.66      0.66      0.79      0.66      0.44     17205\n",
+      "avg / total       0.99      0.65      0.73      0.78      0.69      0.47     17205\n",
       "\n"
      ]
     }
@@ -1332,8 +1332,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Actual Low Risk</th>\n",
-       "      <td>9985</td>\n",
-       "      <td>7146</td>\n",
+       "      <td>9723</td>\n",
+       "      <td>7408</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1342,7 +1342,7 @@
       "text/plain": [
        "                  Predicted High Risk  Predicted Low Risk\n",
        "Actual High Risk                   45                  29\n",
-       "Actual Low Risk                  9985                7146"
+       "Actual Low Risk                  9723                7408"
       ]
      },
      "execution_count": 23,
@@ -1407,8 +1407,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Actual Low Risk</th>\n",
-       "      <td>9985</td>\n",
-       "      <td>7146</td>\n",
+       "      <td>9723</td>\n",
+       "      <td>7408</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1417,7 +1417,7 @@
       "text/plain": [
        "                  Predicted High Risk  Predicted Low Risk\n",
        "Actual High Risk                   45                  29\n",
-       "Actual Low Risk                  9985                7146"
+       "Actual Low Risk                  9723                7408"
       ]
      },
      "metadata": {},
@@ -1427,14 +1427,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy Score : 0.5126233144591676\n",
+      "Accuracy Score : 0.5202702702702703\n",
       "Classification Report\n",
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.00      0.61      0.42      0.01      0.50      0.26        74\n",
-      "   low_risk       1.00      0.42      0.61      0.59      0.50      0.25     17131\n",
+      "  high_risk       0.00      0.61      0.43      0.01      0.51      0.27        74\n",
+      "   low_risk       1.00      0.43      0.61      0.60      0.51      0.26     17131\n",
       "\n",
-      "avg / total       0.99      0.42      0.61      0.59      0.50      0.25     17205\n",
+      "avg / total       0.99      0.43      0.61      0.60      0.51      0.26     17205\n",
       "\n"
      ]
     }
@@ -1696,9 +1696,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mlenv",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "mlenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1710,7 +1710,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
